feat: Criação da ConnectionString e definção do Context como um service na class Startup

--- a/DeliveryApp/appsettings.json
+++ b/DeliveryApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-4P637L6\\SQLEXPRESS;Initial Catalog=DeliveryDatabase; Integrated Security=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
