Adicionando comentários pertinentes

--- a/DeliveryApp/appsettings.json
+++ b/DeliveryApp/appsettings.json
@@ -1,6 +1,8 @@
 {
+  // A connection strings define o nome do servidor local,o nome do banco a ser criado 
+  // Ela realiza a conexão com o banco de dados
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-4P637L6\\SQLEXPRESS;Initial Catalog=DeliveryDatabase; Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-4P637L6\\SQLEXPRESS;Initial Catalog=DeliveryDatabase;Integrated Security=True"
   },
 
   "Logging": {
