--- a/DeliveryApp/appsettings.json
+++ b/DeliveryApp/appsettings.json
@@ -3,7 +3,7 @@
   // Ela realiza a conexão com o banco de dados
   // Referência Encrypt: https://community.powerbi.com/t5/Report-Server/Microsoft-SQL-A-connection-was-successfully-established-with-the/m-p/2323459
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=desktop-4P637L6\\sqlexpress;Initial Catalog=DeliveryDatabase;Integrated Security=True; Encrypt=False"
+    "DefaultConnection": "Data Source=DESKTOP-EQ2GJNC\\sqlexpress;Initial Catalog=DeliveryDatabase;Integrated Security=True; Encrypt=False; TrustServerCertificate=True"
   },
 
   "Logging": {
